--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,10 @@
     <string name="setting">Cài đặt</string>
     <string name="about">Về tác giả</string>
     <string name="detail_list">Danh sách</string>
+    <string name="search">Tìm kiếm</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_artist_list">ArtistListActivity</string>
 
 </resources>
